Bug 432459 - color selectors cover the entire screen and slow on android
Summary: color selectors cover the entire screen and slow on android
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 4.4.2
Platform: Android Android 11.x
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-03 10:53 UTC by barberapali
Modified: 2021-02-23 08:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
color selector on windows top view and on android bottom view (478.04 KB, image/jpeg)
2021-02-03 10:53 UTC, barberapali
Details

Note You need to log in before you can comment on or make changes to this bug.
Description barberapali 2021-02-03 10:53:00 UTC
Created attachment 135389 [details]
color selector on windows top view and on android bottom view

SUMMARY
Quick color selectors :Color selector (default shortcut Shift+I),color history(default shortcut H), common colors (default shortcut U), minimal shade selector (default shortcut Shift+N) take the whole screen on android compared to a tiny portion  centered under the current cursor position on windows


Tested on Android 11/ galaxy tab s7+

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT
color selectors take the entire screen area

EXPECTED RESULT
display in a small floating window centered on the current cursor position

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Krita

 Version: 4.4.2
 Languages: C
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: arm64-little_endian-lp64
  Build CPU: arm64
  CPU: arm64
  Kernel Type: linux
  Kernel Version: 4.19.113-20748183
  Pretty Productname: Android  (11.0)
  Product Type: android
  Product Version: 11.0
  Desktop: 

OpenGL Info
 
  Vendor:  "Qualcomm" 
  Renderer:  "Adreno (TM) 650" 
  Version:  "OpenGL ES 3.2 V@0502.0 (GIT@7c6959d1f7, Ifdda647016, 1599142814) (Date:09/03/20)" 
  Shading language:  "OpenGL ES GLSL ES 3.20" 
  Requested format:  QSurfaceFormat(version 2.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
  Current format:    QSurfaceFormat(version 3.2, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.2
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: false 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: true 

Hardware Information

  GPU Acceleration: angle
  Memory: 5562 Mb
  Number of Cores: 8
  Swap Location: /data/user/0/org.krita/files

Current Settings

  Current Swap Location: /data/user/0/org.krita/files
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: 
		Depth: 32
		Scale: 1.31253
		Resolution in pixels: 2133x1287
		Manufacturer: 
		Model: 
		Refresh Rate: 60

Current Settings

  Current Swap Location: /data/user/0/org.krita/files
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false
Comment 1 Tiar 2021-02-03 13:57:07 UTC
Can you install 4.4.1 apk and see if it's smaller there? The link to apk is here: https://download.kde.org/stable/krita/4.4.1/ (I'm not sure which one you should use).
Comment 2 barberapali 2021-02-03 15:14:17 UTC
looks the same
Comment 3 sh_zam 2021-02-03 16:44:46 UTC
Git commit 8945ec9e61774f08819e84273c1a47ee0aaf9243 by Sharaf Zaman.
Committed on 03/02/2021 at 16:43.
Pushed by szaman into branch 'master'.

Android: color selector covering entire screen

The `defaultWindowState` for `Qt::Window` on Android is
`Qt::WindowMaximized` for all but Dialogs and Popups...

M  +1    -1    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp

https://invent.kde.org/graphics/krita/commit/8945ec9e61774f08819e84273c1a47ee0aaf9243
Comment 4 sh_zam 2021-02-23 08:51:49 UTC
Git commit cd978aedb3163a61ff6046bc25ea0ba1c6a00987 by Sharaf Zaman.
Committed on 23/02/2021 at 08:19.
Pushed by szaman into branch 'krita/4.3'.

Android: color selector covering entire screen

The `defaultWindowState` for `Qt::Window` on Android is
`Qt::WindowMaximized` for all but Dialogs and Popups...
(cherry picked from commit 8945ec9e61774f08819e84273c1a47ee0aaf9243)

M  +1    -1    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp

https://invent.kde.org/graphics/krita/commit/cd978aedb3163a61ff6046bc25ea0ba1c6a00987