Android: color selector covering entire screen

The `defaultWindowState` for `Qt::Window` on Android is
`Qt::WindowMaximized` for all but Dialogs and Popups...

BUG:432459