plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp
@@ -378,7 +378,7 @@ void KisColorSelectorBase::lazyCreatePopup()
         // the WM from showing another taskbar entry,
         // but will require that we handle window activation manually
         m_popup->setWindowFlags(Qt::FramelessWindowHint |
-#ifdef Q_OS_MACOS
+#if defined(Q_OS_MACOS) || defined(Q_OS_ANDROID)
                                 Qt::Popup |
 #else
                                 Qt::Window |
